= Version History =
x.x:

- changed: moved page_handler to its own lib file
- changed: moved hook to its own lib file

1.0.2 (2011-12-05):

- changed: loading of pages navigation menu now ajax based (performance increase on heavy trees)
- changed: moved changelog to CHANGES.txt in preperation for Elgg 1.8
- changed: moved features/credits to README.txt in preperation for Elgg 1.8

1.0.1 (2011-05-18):

- fixed: unable to view pages history

1.0 (2011-03-25):

- initial release